fix header z-index

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -6,6 +6,7 @@
   background-color: #333;
   display: flex;
   justify-content: center;
+  z-index: 20;
 }
 
 .header {
